--- a/css/style.css
+++ b/css/style.css
@@ -791,7 +791,7 @@ a {
     .store_img_wrap > .m_store_img {
         width: 100%;
         padding-bottom: 45em;
-        background-image: url(images/store_image_m.jpg);
+        background-image: url(https://tomntoms.com/assets/images/main/section2_bg_m.jpg);
         background-position: bottom;
         background-size: cover;
         background-repeat: no-repeat;
@@ -1259,7 +1259,7 @@ a {
         display: block;
         width: 100%;
         padding-bottom: 26.5em;
-        background-image: url(images/store_image.jpg);
+        background-image: url(https://tomntoms.com/assets/images/main/section2_bg.jpg);
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -1858,7 +1858,7 @@ a {
         display: block;
         width: 100%;
         padding-bottom: 41.2em;
-        background-image: url(../images/store_image.jpg);
+        background-image: url(https://tomntoms.com/assets/images/main/section2_bg.jpg);
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
