--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a {
 /*모바일*/
 
 @media all and (min-width:0) {
-  header {
+    header {
         position: fixed;
         max-width: 100vw;
         width: 100%;
@@ -209,6 +209,112 @@ a {
 
     .toggle-menu > ul > .li.active .arrow span:first-child {
         display: none;
+    }
+
+    .mob-slide-wrap .slick-dots {
+        min-width: 300px;
+        position: absolute;
+        bottom: 40px;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 7777;
+    }
+
+
+    .mob-slide-wrap .slick-dots li button:before {
+        content: "";
+        display: none;
+    }
+
+    .mob-slide-wrap .slick-dots li button {
+        min-width: 68px;
+        height: 6px;
+        padding: 0;
+        opacity: 1;
+        background-color: white;
+    }
+
+    .mob-slide-wrap .slick-dots li button:hover {
+        opacity: 1;
+    }
+
+    .mob-slide-wrap .slick-dots li.slick-active button {
+        background-color: black;
+        transition: 1s;
+    }
+
+    .mob-slide-wrap .slick-dots li {
+        width: auto;
+        height: auto;
+        margin: 0 3px;
+    }
+
+    /*section01 - vertical slide*/
+    .pc-vertical-slide {
+        display: none;
+    }
+
+    .vertical-total-wrap {
+        transition: 0.5s;
+        max-width: 100vw;
+        height: 70px;
+        line-height: 70px;
+        background-color: #572a31;
+        display: flex;
+        justify-content: flex-start;
+        position: relative;
+        /*        overflow: hidden;*/
+        margin-top: -31px;
+    }
+
+    .conversation-icon {
+        font-size: 34px;
+        text-align: center;
+        margin-left: 7%;
+    }
+
+
+    .vertical-slide-list {
+        position: absolute;
+        width: 90%;
+        /*        top: 0;*/
+        left: 10px;
+
+
+    }
+
+    .vertical-slide-list div {
+        width: 100%;
+    }
+
+    .vertical-slide-list div span {
+        float: left;
+        font-family: 'Noto Sans JP', sans-serif;
+    }
+
+    .vertical-slide-list div span:nth-child(1) {
+        width: 70%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        display: block;
+        color: white;
+        font-size: 2vmin;
+
+    }
+
+    .vertical-slide-list div span:nth-child(2) {
+        width: 23%;
+        color: white;
+        font-size: 2vmin;
+        text-align: end;
+    }
+
+    .vertical-slide-list div span:nth-child(3) {
+        width: 7%;
+        font-size: 2vmin;
+        color: black;
+        text-align: end;
     }
 
 }
@@ -592,111 +698,7 @@ a {
     }
 
 
-    .mob-slide-wrap .slick-dots {
-        width: 500px;
-        position: absolute;
-        bottom: 40px;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 7777;
-    }
-
-
-    .mob-slide-wrap .slick-dots li button:before {
-        content: "";
-        display: none;
-    }
-
-    .mob-slide-wrap .slick-dots li button {
-        width: 97px;
-        height: 6px;
-        padding: 0;
-        opacity: 1;
-        background-color: white;
-    }
-
-    .mob-slide-wrap .slick-dots li button:hover {
-        opacity: 1;
-    }
-
-    .mob-slide-wrap .slick-dots li.slick-active button {
-        background-color: black;
-        transition: 1s;
-    }
-
-    .mob-slide-wrap .slick-dots li {
-        width: auto;
-        height: auto;
-        margin: 0 3px;
-    }
-
     /*section01 - vertical slide*/
-    .pc-vertical-slide {
-        display: none;
-    }
-
-    .vertical-total-wrap {
-        transition: 0.5s;
-        max-width: 100vw;
-        height: 70px;
-        line-height: 70px;
-        background-color: #572a31;
-        display: flex;
-        justify-content: flex-start;
-        position: relative;
-        /*        overflow: hidden;*/
-        margin-top: -31px;
-    }
-
-    .conversation-icon {
-        font-size: 34px;
-        text-align: center;
-        margin-left: 7%;
-    }
-
-
-    .vertical-slide-list {
-        position: absolute;
-        width: 90%;
-        /*        top: 0;*/
-        left: 10px;
-
-
-    }
-
-    .vertical-slide-list div {
-        width: 100%;
-    }
-
-    .vertical-slide-list div span {
-        float: left;
-        font-family: 'Noto Sans JP', sans-serif;
-    }
-
-    .vertical-slide-list div span:nth-child(1) {
-        width: 70%;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        display: block;
-        color: white;
-        font-size: 14px;
-
-    }
-
-    .vertical-slide-list div span:nth-child(2) {
-        width: 25%;
-        color: white;
-        font-size: 14px;
-        text-align: end;
-    }
-
-    .vertical-slide-list div span:nth-child(3) {
-        width: 5%;
-        font-size: 16px;
-        color: black;
-        text-align: end;
-    }
 
     /*section02*/
     .tt-menu-wrap {
@@ -780,6 +782,7 @@ a {
         opacity: 0;
     }
 
+
     /*section03*/
     .store_img_wrap {
         max-width: 100vw;
@@ -855,7 +858,7 @@ a {
         font-size: 16px;
         font-weight: bold;
         position: absolute;
-        top: 34%;
+        top: 36%;
         left: 50%;
         transform: translateX(-50%);
         transition: 0.5s;
@@ -874,21 +877,24 @@ a {
     }
 
     .store_img_wrap > .m_store_img p:last-child span:nth-child(1) {
-        width: 100%;
+        width: 98%;
+        margin: 0 auto;
         margin-bottom: 1%;
         background-color: #572a31;
         color: white;
     }
 
     .store_img_wrap > .m_store_img p:last-child span:nth-child(2) {
-        width: 49%;
-        margin-right: 1%;
+        max-width: 48%;
+        width: 100%;
+        margin-left: 1%;
         border: 1px solid #572a31;
         color: #572a31;
     }
 
     .store_img_wrap > .m_store_img p:last-child span:nth-child(3) {
-        width: 49%;
+        width: 48%;
+        margin-left: 1%;
         border: 1px solid #572a31;
         color: #572a31;
     }
